[workspace]
members = ["integration-tests"]

[package]
name = "socks5-to-connect"
version = "0.1.0"
edition = "2021"
authors = ["pmendes@cloudflare.com", "fisher@cloudflare.com", "aramine@cloudflare.com"]
publish = false

[dependencies]
anyhow = "1.0.95"
boring = "4.3"
clap = { version = "4.5.29", features = ["derive", "env"] }
socks5-server = "0.10"
futures-util = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
hyper-boring = { version = "4.3", features = ["hyper1"] }
tokio-boring = { version = "4.3" }
socks5-proto = "0.4.1"
http = "1.2.0"
http-body-util = "0.1.2"
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
url = "2.5.4"
tracing = "0.1.41"
bytes = "1.10.0"
h2 = "0.4.7"
thiserror = "2.0.11"
tracing-subscriber = "0.3.19"
tower-service = "0.3.3"
